[200~Create an array of names, in mixed cases